# arle

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  AGENTS.md  AGENT_SCHEDULER_OPTIMIZATION_PLAN.md  AGENT_WORLD_CLASS_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  deny.toml  kv_cache_benchmark.py  models  pyproject.toml  requirements-bench.txt  requirements-build.txt  setup.sh
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/autograd/: AGENTS.md  Cargo.toml
crates/autograd/examples/: bench_step_matmul.rs
crates/autograd/src/: adamw_state.rs  backend.rs  backend_cuda.rs  backend_metal.rs  lib.rs  lr_schedule.rs  module.rs  ops.rs  optim.rs  safetensors_io.rs  tape.rs  tensor.rs
crates/autograd/tests/: helpers.rs  m0_ops.rs  m0_toy.rs  m1_adamw.rs  m1_exp.rs  m1_layout.rs  m1_mlp.rs  m1_ops.rs  m1_sigmoid.rs  m1_slice.rs  test_adamw_state.rs  test_backend.rs  test_device_handle.rs  test_linear_attention.rs  test_lr_schedule.rs  test_optimizer_trait.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  banner.rs  doctor.rs  download.rs  hardware.rs  hf_search.rs  hub_discovery.rs  lib.rs  model_catalog.rs  model_picker.rs  repl.rs  serve.rs  startup.rs  tps.rs  trace.rs  train_cli.rs  welcome.rs
crates/cuda-kernels/: AGENTS.md  Cargo.toml  build.rs
crates/cuda-kernels/src/: collective.rs  ffi.rs  flashinfer.rs  kv_quant.rs  kv_turboquant.rs  kv_types.rs  lib.rs  paged_kv.rs  prelude.rs  tensor.rs  tilelang.rs  turboquant_state.rs
crates/cuda-kernels/tests/: paged_kv_copy_pages_roundtrip.rs  paged_prefill_parity.rs
crates/infer-agent/: Cargo.toml
crates/infer-agent/src/: lib.rs
crates/infer-cli/: Cargo.toml
crates/infer-cli/src/: args.rs  banner.rs  hardware.rs  lib.rs  model_picker.rs  repl.rs  startup.rs
crates/infer-cuda-kernels/: AGENTS.md  Cargo.toml  build.rs
crates/infer-cuda-kernels/src/: ffi.rs  flashinfer.rs  graph_pool.rs  kv_quant.rs  kv_turboquant.rs  kv_types.rs  lib.rs  paged_kv.rs  prelude.rs  tensor.rs  turboquant_state.rs
crates/infer-cuda-kernels/tests/: paged_prefill_parity.rs
crates/infer-engine/: Cargo.toml
crates/infer-engine/src/: lib.rs  model.rs  request_handle.rs  sampler.rs
crates/qwen35-spec/: Cargo.toml
crates/qwen35-spec/src/: lib.rs
crates/train/: Cargo.toml
crates/train/data/: sample.txt
crates/train/examples/: build_bpe_tokenizer.rs  build_wordlevel_tokenizer.rs
crates/train/scripts/: wandb_sink_helper.py
crates/train/src/: causal_lm.rs  checkpoint.rs  cli_args.rs  commands.rs  control.rs  curriculum.rs  data_adapter.rs  dataset.rs  deepseek.rs  eval_lm.rs  grad_accum.rs  grad_clip.rs  grpo.rs  hub_dataset.rs  lib.rs  lora.rs  loss.rs  metrics.rs  model.rs  model_family.rs  multi_turn.rs  policy.rs  policy_support.rs  qwen3.rs  qwen35.rs  qwen35_checkpoint.rs  qwen3_autograd.rs  qwen3_checkpoint.rs  qwen3_support.rs  reward.rs  rollout.rs  sampling.rs  server.rs  sft_data.rs  task_gen.rs  tokenizer.rs  trainer.rs  verifier.rs
crates/train/tests/: test_checkpoint.rs  test_checkpoint_v2.rs  test_control.rs  test_convergence_smoke.rs  test_curriculum.rs  test_grad_accum.rs  test_grad_clip.rs  test_grpo.rs  test_lm.rs  test_lora.rs  test_metrics.rs  test_multi_turn.rs  test_multi_turn_qwen3.rs  test_qwen35_forward.rs  test_qwen35_hybrid_backend_parity_metal.rs  test_qwen35_hybrid_forward_metal.rs  test_qwen35_hybrid_sft_loop.rs  test_qwen35_hybrid_sft_loop_metal.rs  test_qwen35_sft_loop_metal.rs  test_qwen3_autograd_forward.rs  test_qwen3_forward.rs  test_qwen_lora.rs  test_reward.rs  test_sft_data.rs  test_sft_loop_metal.rs  test_sft_loop_smoke.rs  test_task_gen.rs  test_tinylm.rs  test_trainer_loop.rs  test_verifier.rs
infer/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
infer/benches/: ops_bench.rs
infer/benches/ops/: ops_attention_bench.rs  ops_batched_bench.rs  ops_cuda_bench.rs  ops_elementwise_bench.rs  ops_embedding_sampling_bench.rs  ops_qwen35_norm_bench.rs  ops_qwen35_state_bench.rs  ops_triton_bench.rs
infer/csrc/: decode_prep_paged.cu  flashinfer_decode.cu  fused_attention.cu  kv_cache_to_paged.cu  norm.cu  prefill_attention_hd256.cu
infer/csrc/cuda/: attn_output_gate.cu  conv1d.cu  conv1d_decode_batch.cu  decode_attention_quantized.cu  decode_prep_paged.cu  decode_prep_paged_hd256.cu  flashinfer_decode.cu  flashinfer_prefill.cu  flashinfer_tc_decode.cu  fused_mlp.cu  gdr_decode_batch.cu  gemv.cu  kv_cache_to_paged.cu  kv_quant.cu  marlin_kernel.cu  marlin_repack.cu  norm.cu  paged_kv_append.cu  prefill_attention.cu  quantized_gemv.cu  sampling.cu  (+3 more)
infer/docs/: index.md
infer/examples/: regenerate_test_data.rs
infer/mlx-sys/: build.rs
infer/scripts/: generate_test_data.py
infer/src/: backend.rs  backend_runtime.rs  block_manager.rs  bootstrap.rs  chat.rs  chat_protocol.rs  cpu_backend.rs  cuda_graph_pool.rs  distributed.rs  error.rs  events.rs  ffi.rs  flashinfer_metadata.rs  gguf.rs  hf_hub.rs  http_server.rs  kv_tier.rs  lib.rs  logging.rs  main.rs  memory_planner.rs  metal_backend.rs  metal_gdr.rs  metal_kv_pool.rs  metal_scheduler.rs  metrics.rs  mlx.rs  model.rs  model_arch.rs  model_registry.rs  model_source.rs  ops.rs  paged_kv.rs  prefix_cache.rs  quant.rs  request_handle.rs  sampler.rs  scheduler.rs  server_engine.rs  session_persistence.rs  (+8 more)
infer/test_data/: Qwen3-4B.json  Qwen3-8B.json
infer/tests/: bench_prefill.rs  carnice_dtype_audit.rs  carnice_real_tensor_dequant.rs  carnice_tensor_probe.rs  distributed_nccl_smoke.rs  dsv4_nano_smoke.rs  e2e.rs  e2e_qwen35.rs  gen_test_data_35.rs  greedy_consistency.rs  ground_truth_q4k.rs  magicdec_self_spec_integration.rs  metal_eval_audit.rs  q4k_kernel_correctness.rs  qwen3_8b_regression.rs  regen_test_data.rs  scheduler_kv_pressure_drains.rs  smoke_carnice_27b_q4k.rs  smoke_qwen35_gguf.rs  smoke_qwen3_4b_gguf.rs  spec_decode_correctness.rs  spec_decode_radix_pollution.rs  test_qwen3_lora_loader.rs  tokenizer_fingerprint_radix_isolation.rs
(+1554 files in other folders)
