[workspace]
members = [".", "infer", "crates/autograd", "crates/infer-agent", "crates/infer-chat", "crates/infer-cli", "crates/infer-cuda-kernels", "crates/infer-tools", "crates/mlx-sys", "crates/train"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Workspace-wide lint posture. Only universally-agreed lints live here; crates
# that want stricter pedantic enforcement (currently only `infer`) opt in via
# their own `[lints.clippy]` block with `pedantic = "warn"`.
[workspace.lints.clippy]
# Default-level lints that this codebase disables because they fire on
# legitimate patterns. See infer/Cargo.toml for the `pedantic`-level allows
# that only apply to the `infer` crate.
too_many_arguments = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
# Restriction lints worth enforcing workspace-wide.
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.dependencies]
blake3 = { version = "1", default-features = false, features = ["std"] }
libm = { version = "0.2" }
memmap2 = { version = "0.9" }
postcard = { version = "1", default-features = false, features = ["use-std"] }
safetensors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokenizers = "0.22"

[package]
name = "agent-infer"
version = "0.1.0"
edition = "2024"

[features]
# Enable CUDA (mirrors infer's cuda feature). Default on, like infer.
default = ["cuda"]
cli = ["dep:infer-cli"]
cuda = ["infer-cli/cuda"]
# Marker feature for CPU-only builds (CI, macOS). Pass --no-default-features --features no-cuda.
no-cuda = ["infer-cli/no-cuda"]
# Development-oriented CPU backend. Use with --no-default-features --features cpu,no-cuda.
cpu = ["infer-cli/cpu"]
# Metal backend via mlx-rs (Apple Silicon). Use with --no-default-features --features metal,no-cuda.
metal = ["infer-cli/metal"]

[dependencies]
anyhow = "1.0"
infer-cli = { path = "crates/infer-cli", default-features = false, optional = true }

[dev-dependencies]
infer = { path = "infer", default-features = false }

[[bin]]
name = "agent-infer"
path = "src/main.rs"
required-features = ["cli"]

[lints]
workspace = true
