[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-infer"
version = "0.1.0"
description = "Agent system built on Dynamo + Infer"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tokenizers>=0.20",
]

[project.optional-dependencies]
serve = [
    "starlette>=0.40",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
