[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-infer"
version = "0.1.0"
description = "Rust LLM inference engine with a local agent binary"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tokenizers>=0.20",
]

[project.optional-dependencies]
serve = [
    "starlette>=0.40",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
bench = [
    "httpx==0.28.1",
    "guidellm[recommended]>=0.3",
]
observe = [
    "wandb>=0.19",
]
