[package]
autobenches = false
name = "infer"
default-run = "infer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokenizers = "0.22"
safetensors = "0.7"
anyhow = "1.0"
thiserror = "2"
ndarray = "0.16"
blake3 = { workspace = true }
postcard = { workspace = true }
half = { version = "2.4", features = ["num-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
cudarc = { version = "0.18", features = [
    "cuda-version-from-build-system",
    "cublas",
    "cuda-12080",
    "f16",
], optional = true }
memmap2 = { version = "0.9", optional = true }
# HuggingFace Hub: auto-download model weights + tokenizer by model ID
hf-hub = { version = "0.5", features = ["tokio"] }
# MLX Metal backend (Apple Silicon)
# mlx-sys: direct MLX C API bindings (bindgen). No mlx-rs wrapper.
mlx-sys = { path = "../crates/mlx-sys", optional = true }
# libc: peak RSS via getrusage for metal_bench
libc = { version = "0.2", optional = true }
# NIXL (NVIDIA Inference Transfer Library) — optional dep for the Tiered KV
# Cache §P5 remote-tier stub. `stub-api` disables link-time dependency on
# libnixl.so so `cargo check --features rdma-nixl` succeeds on macOS CI.
# Production CUDA deployments that want to link the real native library
# should instead enable `rdma-nixl-real`.
nixl-sys = { version = "1.0", optional = true, features = ["stub-api"] }
log = "0.4"
logforth = { version = "0.29", features = ["starter-log", "layout-text", "diagnostic-task-local"] }
colored = "3"
fastrace = { version = "0.7.16", features = ["enable"] }
clap = { version = "4.5.57", features = ["derive"] }
rand = "0.10"
tokio-stream = "0.1"
futures-util = "0.3"
comfy-table = "7.2"
crossbeam-channel = "0.5"
infer-chat = { path = "../crates/infer-chat" }
infer-cuda-kernels = { path = "../crates/infer-cuda-kernels", default-features = false }

[features]
# Enable CUDA kernel compilation and GPU inference (default on Linux/GPU machines).
cuda = ["dep:cudarc", "dep:memmap2", "infer-cuda-kernels/cuda"]
# Disable CUDA – allows compilation on macOS / CI without GPU. GPU ops panic at runtime.
no-cuda = ["infer-cuda-kernels/no-cuda"]
# Development-oriented CPU backend for serial smoke tests and local validation.
cpu = []
# Metal backend via mlx-sys direct C++ bridge (Apple Silicon).
metal = ["dep:mlx-sys", "dep:libc"]
# Tiered KV cache §P5: `NixlTransport` stub. Pulls in `nixl-sys` with its
# `stub-api` enabled so `cargo check --features rdma-nixl` compiles on
# macOS without `libnixl.so` installed (the stub calls `dlopen` at runtime
# and fails gracefully; only types and C++ stubs are linked at build time).
# On a production CUDA host with the real NIXL library, enable
# `rdma-nixl-real` instead — it pulls the same dep without `stub-api` so
# the build links the actual `libnixl.so`.
rdma-nixl = ["dep:nixl-sys"]
rdma-nixl-real = ["dep:nixl-sys"]
default = ["cuda"]
reference = []

# CUDA-only binaries — skipped under --features metal,no-cuda
[[bin]]
name = "infer"
path = "src/main.rs"
required-features = ["cuda"]

[[bin]]
name = "triton_silu_smoke"
path = "src/bin/triton_silu_smoke.rs"
required-features = ["cuda"]

[[bin]]
name = "bench_serving"
path = "src/bin/bench_serving.rs"
required-features = ["cuda"]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
base64 = "0.22"
tower = "0.5"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints (too noisy for this codebase)
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
upper_case_acronyms = "allow"
doc_markdown = "allow"
# Cherry-picked nursery lints
redundant_clone = "warn"
unused_peekable = "warn"
# Restriction lints worth enforcing (duplicated from workspace so the rest
# still fire when pedantic is on)
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
print_stdout = "allow"
print_stderr = "allow"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[[bin]]
name = "metal_bench"
path = "src/bin/metal_bench.rs"
required-features = ["metal"]

[[bin]]
name = "metal_request"
path = "src/bin/metal_request.rs"
required-features = ["metal"]

[[bin]]
name = "metal_serve"
path = "src/bin/metal_serve.rs"
required-features = ["metal"]

[[bin]]
name = "cpu_serve"
path = "src/bin/cpu_serve.rs"
required-features = ["cpu"]

[[example]]
name = "regenerate_test_data"
path = "examples/regenerate_test_data.rs"
required-features = ["cuda"]

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "ops_bench"
harness = false
required-features = ["cuda"]
