[package]
name = "agent"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
infer = { path = "../../infer", default-features = false }
chat = { path = "../chat" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tools = { path = "../tools" }
uuid = { workspace = true }

[lints]
workspace = true
