[package]
name = "autograd"
version = "0.1.0"
edition = "2024"

[features]
default = []
no-cuda = []
# Metal backend (Apple Silicon) via mlx-sys C++ bridge. Host Vec<f32> stays
# authoritative; backend uploads per call, computes `mlx_matmul`, downloads.
metal = ["dep:mlx-sys"]
# CUDA backend via cudarc cuBLAS SGEMM. Same per-call upload/download model.
# PENDING REMOTE CUDA VERIFICATION — user validates on GPU box.
cuda = ["dep:cudarc"]

[dependencies]
libm.workspace = true
smallvec = "1"
thiserror = "2"
mlx-sys = { path = "../mlx-sys", optional = true }
cudarc = { version = "0.18", features = [
    "cuda-version-from-build-system",
    "cublas",
    "cuda-12080",
], optional = true }

[lints]
workspace = true
