[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["cuda"]
cuda = ["infer/cuda"]
no-cuda = ["infer/no-cuda"]
cpu = ["infer/cpu"]
metal = ["infer/metal"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
console = "0.16"
dialoguer = "0.11"
hf-hub = { version = "0.5", features = ["tokio"] }
indicatif = "0.18"
agent = { path = "../agent" }
chat = { path = "../chat" }
infer = { path = "../../infer", default-features = false }
tools = { path = "../tools" }
log = "0.4"
nucleo-matcher = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35"

[lints]
workspace = true
