[package]
name = "cuda-kernels"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[features]
# `cuda` now implies `tilelang-attn` — TileLang is the default prefill
# HD128 path on Qwen3 / sm_89+ after the 2026-04-28 bench showed +5.1%
# tok/s and -82% TTFT vs FlashInfer at c=16/4096-in (see
# docs/experience/wins/2026-04-28-bench-guidellm-cuda-l4-tilelang-prefill-causal-bound.md).
# The FlashInfer prefill HD128 path remains as the reference / fallback
# but is no longer wired in default builds. To run a matched A/B you
# need a separate `target-off/` build with `--features cuda` against an
# older HEAD that still keys the dispatch off `tilelang-attn` cfg —
# see the wins doc for the procedure.
cuda = ["dep:cudarc", "tilelang-attn"]
no-cuda = []
# Bi-implication with `cuda` — enabling either enables both. The kernel
# code under `cfg(feature = "tilelang-attn")` calls into the cuda
# runtime; `--features tilelang-attn` on its own would otherwise
# compile but not link. Cargo deduplicates the feature loop.
tilelang-attn = ["cuda"]
# F0: declare NCCL FFI symbols only. Linking happens in F1 via build.rs.
# Implies `cuda` because `crate::ffi::nccl` lives under `crate::ffi` which
# is itself gated on `cuda` (matching reality: NCCL requires CUDA).
nccl = ["cuda"]
# TileLang HD256 decode (Qwen3.5 q*_kv* full-attn path). Off by default
# because the AOT codegen currently fails with `M must be divisible by
# 16, but got 1` under TileLang 0.1.9 — pure-decode batches have
# BLOCK_M=1 which violates the GemmWarpPolicy invariant. Re-enable
# explicitly once the kernel is rewritten to avoid the M=1 GEMM
# (e.g. pad Q to 16 and mask, or use a bespoke GEMV path). See
# docs/experience/errors/2026-04-28-tilelang-hd256-decode-m1-codegen-failure.md.
tilelang-decode-hd256 = ["tilelang-attn"]

[dependencies]
anyhow = "1.0"
half = { version = "2.4", features = ["num-traits"] }
log = "0.4"
cudarc = { version = "0.18", features = [
    "cuda-version-from-build-system",
    "cublas",
    "cuda-12080",
    "f16",
], optional = true }

[build-dependencies]
cc = "1.0"

[lints]
workspace = true

[[test]]
name = "paged_prefill_parity"
path = "tests/paged_prefill_parity.rs"
harness = false
