[package]
name = "cuda-kernels"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[features]
# 2026-04-28: REVERTED `tilelang-attn` from default `cuda` after the e2e
# test caught the prefill HD128 kernel emitting NaN logits for short
# prompts (`qlen < BLOCK_M=64`). FlashInfer prefill HD128 is the default
# again until the kernel is fixed. See
# `docs/experience/errors/2026-04-28-tilelang-prefill-short-qlen-nan.md`.
cuda = ["dep:cudarc"]
no-cuda = []
# TileLang prefill HD128 path. Implies `cuda` because the kernel code
# calls into the cuda runtime; `--features tilelang-attn` alone would
# otherwise compile but not link. Cargo deduplicates the feature loop.
tilelang-attn = ["cuda"]
# F0: declare NCCL FFI symbols only. Linking happens in F1 via build.rs.
# Implies `cuda` because `crate::ffi::nccl` lives under `crate::ffi` which
# is itself gated on `cuda` (matching reality: NCCL requires CUDA).
nccl = ["cuda"]
# TileLang HD256 decode (Qwen3.5 q*_kv* full-attn path). Off by default
# because the AOT codegen currently fails with `M must be divisible by
# 16, but got 1` under TileLang 0.1.9 — pure-decode batches have
# BLOCK_M=1 which violates the GemmWarpPolicy invariant. Re-enable
# explicitly once the kernel is rewritten to avoid the M=1 GEMM
# (e.g. pad Q to 16 and mask, or use a bespoke GEMV path). See
# docs/experience/errors/2026-04-28-tilelang-hd256-decode-m1-codegen-failure.md.
tilelang-decode-hd256 = ["tilelang-attn"]

[dependencies]
anyhow = "1.0"
half = { version = "2.4", features = ["num-traits"] }
log = "0.4"
cudarc = { version = "0.18", features = [
    "cuda-version-from-build-system",
    "cublas",
    "cuda-12080",
    "f16",
], optional = true }

[build-dependencies]
cc = "1.0"

[lints]
workspace = true

[[test]]
name = "paged_prefill_parity"
path = "tests/paged_prefill_parity.rs"
harness = false
