[package]
name = "infer-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
infer = { path = "../../infer", default-features = false }
infer-chat = { path = "../infer-chat" }
infer-tools = { path = "../infer-tools" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
