[package]
name = "infer-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
infer-chat = { path = "../infer-chat" }
infer-engine = { path = "../infer-engine", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
infer-tools = { path = "../infer-tools" }
