[package]
name = "infer-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
infer = { path = "../../infer", default-features = false }
infer-chat = { path = "../infer-chat" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
infer-tools = { path = "../infer-tools" }
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true
