[package]
name = "infer-cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["cuda"]
cuda = ["infer/cuda"]
no-cuda = ["infer/no-cuda"]
cpu = ["infer/cpu"]
metal = ["infer/metal"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
infer-agent = { path = "../infer-agent" }
infer-chat = { path = "../infer-chat" }
infer = { path = "../../infer", default-features = false }
infer-tools = { path = "../infer-tools" }
log = "0.4"
rustyline = "15"
serde_json = "1.0"

[lints]
workspace = true
