[package]
name = "infer-engine"
version = "0.1.0"
edition = "2024"

[features]
default = ["cuda"]
cuda = ["dep:cudarc", "dep:memmap2", "infer/cuda"]
no-cuda = ["infer/no-cuda"]
cpu = ["infer/cpu"]
metal = ["dep:mlx-sys", "dep:libc", "infer/metal"]

[dependencies]
anyhow = "1.0"
cudarc = { version = "0.18", features = [
    "cuda-version-from-build-system",
    "cublas",
    "cuda-12080",
    "f16",
], optional = true }
infer = { path = "../../infer", default-features = false }
libc = { version = "0.2", optional = true }
log = "0.4"
memmap2 = { version = "0.9", optional = true }
mlx-sys = { path = "../mlx-sys", optional = true }
