[package]
name = "train"
version.workspace = true
edition.workspace = true

[features]
default = []
no-cuda = ["autograd/no-cuda"]
metal = ["autograd/metal"]
cuda = ["autograd/cuda"]

[dependencies]
autograd = { path = "../autograd", default-features = false, features = ["safetensors"] }
anyhow = "1.0"
hf-hub = { version = "0.5", features = ["tokio"] }
opentelemetry = { version = "0.31", default-features = false, features = ["logs"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["logs", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs"] }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
ureq = { version = "2.12", features = ["json"] }
qwen3-spec = { path = "../qwen3-spec" }
qwen35-spec = { path = "../qwen35-spec" }
chat = { path = "../chat" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "pretrain"
path = "src/bin/pretrain.rs"

[[bin]]
name = "train_grpo"
path = "src/bin/train_grpo.rs"

[[bin]]
name = "train_sft"
path = "src/bin/train_sft.rs"

[[bin]]
name = "download_dataset"
path = "src/bin/download_dataset.rs"

[[bin]]
name = "convert_dataset"
path = "src/bin/convert_dataset.rs"

[[bin]]
name = "eval_lm"
path = "src/bin/eval_lm.rs"

[lints]
workspace = true
